facet-args/tests/snapshots/help__subcommand_help_colored_snapshot.snap
---
source: facet-args/tests/help.rs
expression: help
---
command clone

Clone a repository

[1m[33mUSAGE[39m[0m:
    command clone <URL> [DIRECTORY]

[1m[33mARGUMENTS[39m[0m:
        [32m<URL>[39m
            URL of the repository to clone
        [32m<DIRECTORY>[39m
            Directory to clone into
